--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack -d --env.development",
     "production-build": "webpack -p --env.production",
     "analyze-build": "webpack -p --env.analyze",
-    "server": "http-server"
+    "start": "http-server"
   },
   "repository": {
     "type": "git",
@@ -20,22 +20,22 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
-    "http-server": "^0.12.1",
-    "raw-loader": "^4.0.0",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "eslint-loader": "^3.0.4",
+    "http-server": "^0.12.3",
+    "raw-loader": "^4.0.1",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.7.0",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "dashjs": "^3.1.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "numeric": "^1.2.6",
     "spherical-harmonic-transform": "^0.1.1",
-    "video.js": "^7.6.6",
+    "video.js": "^7.7.6",
     "videojs-contrib-dash": "^2.11.0"
   }
 }
